2013-12-01  Paul Thomas  <pault@gcc.gnu.org>

	PR fortran/34547
	* resolve.c (resolve_transfer): EXPR_NULL is always in an
	invalid context in a transfer statement.

2013-11-28  Sergey Ostanevich  <sergos.gnu@gmail.com>

	* lang.opt (Wopenmp-simd): New.

2013-11-25  Janus Weil  <janus@gcc.gnu.org>

	PR fortran/59143
	* interface.c (get_expr_storage_size): Handle array-valued type-bound
	procedures.

2013-11-24  Francois-Xavier Coudert  <fxcoudert@gcc.gnu.org>

	* scanner.c (gfc_open_intrinsic_module): Remove function.
	* gfortran.h (gfc_open_intrinsic_module): Remove prototype.

2013-11-23  Janus Weil  <janus@gcc.gnu.org>

	PR fortran/59228
	* interface.c (compare_parameter): Check for array spec.

2013-11-22  Andrew MacLeod  <amacleod@redhat.com>

	* trans.c: Add required include files from gimple.h.
	* trans-expr.c: Likewise
	* trans-openmp.c: Likewise

2013-11-22  David Malcolm  <dmalcolm@redhat.com>

	* trans.c (trans_runtime_error_vararg): Remove use of input_line
	macro.

2013-11-17  Andrew MacLeod  <amacleod@redhat.com>

	* fortran/trans-intrinsic.c: Include tree-nested.h.

2013-11-14  Andrew MacLeod  <amacleod@redhat.com>

	* trans-expr.c: Include only gimplify.h and gimple.h as needed.
	* trans-openmp.c: Likewise.

2013-11-14  Diego Novillo  <dnovillo@google.com>

	* decl.c: Include stringpool.h.
	* iresolve.c: Include stringpool.h.
	* match.c: Include stringpool.h.
	* module.c: Include stringpool.h.
	* target-memory.c: Include stor-layout.h.
	* trans-common.c: Include stringpool.h.
	Include stor-layout.h.
	Include varasm.h.
	* trans-const.c: Include stor-layout.h.
	* trans-decl.c: Include stringpool.h.
	Include stor-layout.h.
	Include varasm.h.
	Include attribs.h.
	* trans-expr.c: Include stringpool.h.
	* trans-intrinsic.c: Include stringpool.h.
	Include tree-nested.h.
	Include stor-layout.h.
	* trans-io.c: Include stringpool.h.
	Include stor-layout.h.
	* trans-openmp.c: Include stringpool.h.
	* trans-stmt.c: Include stringpool.h.