@@ -1,5 +1,12 @@
 2013-12-01  Paul Thomas  <pault@gcc.gnu.org>
 
+	PR fortran/58410
+	* trans-array.c (gfc_alloc_allocatable_for_assignment): Do not
+	use the array bounds of an unallocated array but set its size
+	to zero instead.
+
+2013-12-01  Paul Thomas  <pault@gcc.gnu.org>
+
 	PR fortran/34547
 	* resolve.c (resolve_transfer): EXPR_NULL is always in an
 	invalid context in a transfer statement.
